# Lapocalypse3000

./: .gitignore  readme.md
code/ESP32/anchor/anchor-esp32/: anchor-esp32.ino
code/ESP32/dwm-debug/: dwm-debug.ino
code/ESP32/mf_anchor/: mf_anchor.ino
code/ESP32/mf_tag/: mf_tag.ino
code/ESP32/tag/tag_wt32-eth01/: tag_wt32-eth01.ino
code/controlserver/: README.md  debug.ts  package.json
code/dashboard/: Cargo.toml
code/dashboard/src/: main.rs
code/ranging/anchor-v2/: .gitignore  platformio.ini  registers_base_sub.csv  replace_registers_with_ids.sh
code/ranging/anchor-v2/gcm.cache/: moduletest.gcm
code/ranging/anchor-v2/src/: anchor.h  dw3000_api.h  dw3000_macros.h  dw3000_registers.h  dw3000_vals_old.h  main.cpp  moduletest.cpp  regids_dw3000_api.h  tag.h
code/vibeviz/: package.json
code/vibeviz/src/lib/components/: RangeChart.svelte
code/vibeviz/src/routes/: +page.svelte  +page.ts
code/vibeviz/static/: errors_1.txt  ranges_1.txt
code/wt32/dwm-debug/: dwm-debug.ino
data/tests/: rangetest_1.txt
