[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36"
metrics = "0.24.3"
rumqttc = "0.25.1"
serde = "1.0.228"
serde_json = "1.0.145"

[dependencies.bevy_metrics_dashboard]
version = "0.8.0"
default-features = false
features = ["bevy_egui"]
